--- a/EmployeeMS/src/Components/style.css
+++ b/EmployeeMS/src/Components/style.css
@@ -1,5 +1,5 @@
 .loginpage {
-    background: url('images/employeems.jpeg');
+    background: url('images/employee.avif');
     background: linear-gradient(rgba(11, 11, 11, 0.5) rgba(10, 10, 10, 0.5), url('images/employeems.jpeg'));
     background-position: center;
     background-repeat: no-repeat;
@@ -7,8 +7,9 @@
 }
 
 .loginForm {
-    background-color: rgba(1, 32, 93, 0.5);
+    background-color: rgba(98, 85, 1, 0.5);
     color: white;
+
 }
 
 
@@ -19,5 +20,11 @@ ul li:hover {
 .employee_image {
     width: 40px;
     height: 40px;
+    border-radius: 50%;
+}
+
+.employee_images {
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
 }
